# lynx

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.traefik.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 05b2ac75c5c5_add_review_status_and_error_fields.py  be551a4f657c_create_tables.py
app/: config.py  constants.py  database.py  logging.py  main.py  models.py  prompts.py
app/routers/: auth.py  dashboard.py  settings.py  webhooks.py
app/services/: github.py  gitlab.py  llm.py  review.py  validation.py
app/utils/: crypto.py
backend/: Dockerfile
backend/app/: constants.py  logging.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 05af5615a498_add_cost_calculation.py  1bd8d792dbef_add_llm_models.py  32901a3c5be4_add_pr_details_and_pending_review_status.py  (+3 more)
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  database.py
backend/app/utils/: cost.py  crypto.py  file_filter.py
frontend/: biome.json  components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: app-sidebar.tsx  mobile-nav.tsx  nav-user.tsx  not-found.tsx
frontend/src/hooks/: use-api-keys.ts  use-auth.ts  use-clipboard.ts  use-notifications.ts  use-reviews.ts  use-stats.ts  use-templates.ts  useAuth.ts
frontend/src/lib/: api.ts  navigation.ts  query-client.ts  utils.ts
frontend/src/routes/: __root.tsx  index.tsx
scripts/: setup.sh
(+57 files in other folders)
