[project]
name = "lynx"
version = "0.1.0"
description = ""
authors = [
    {name = "tarek-gritli",email = "tarek.gritli@insat.ucar.tn"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "google-genai (>=1.60.0,<2.0.0)",
    "anthropic (>=0.76.0,<0.77.0)",
    "python-gitlab (>=7.1.0,<8.0.0)",
    "alembic (>=1.18.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
